--- a/index.html
+++ b/index.html
@@ -34,6 +34,85 @@
 </div>
 <div>
   <h2>WHO</h2>
+
+  <table width="90%">
+    <caption>
+      Цены на флагманы
+    </caption>
+    <thead>
+    <tr>
+      <th>
+        Производитель
+      </th>
+      <th>
+        Модель
+      </th>
+      <th>
+        Цена
+      </th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+      <td rowspan="3">
+        iPhone
+      </td>
+      <td>
+        12 Pro
+      </td>
+      <td>
+        $999
+      </td>
+    </tr>
+    <tr>
+      <td>
+        12 mini
+      </td>
+      <td>
+        $699
+      </td>
+    </tr>
+    <tr>
+      <td>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad assumenda cum dignissimos doloribus eligendi fuga inventore laboriosam minus, molestiae officiis praesentium, provident quisquam ratione sit soluta sunt veritatis. Excepturi, officia.
+      </td>
+      <td>
+        $799
+      </td>
+    </tr>
+    </tbody>
+    <tbody>
+    <tr>
+      <td rowspan="2">
+        Xiaomi
+      </td>
+      <td>
+        Mi 10
+      </td>
+      <td>
+        $766
+      </td>
+    </tr>
+    <tr>
+      <td>
+        Black Shark 3
+      </td>
+      <td>
+        $529
+      </td>
+    </tr>
+    </tbody>
+    <tfoot>
+    <tr>
+      <td colspan="2">
+        Средняя цена
+      </td>
+      <td>
+        $766
+      </td>
+    </tr>
+    </tfoot>
+  </table>
   <button>Register</button>
 </div>
 <div>
